--- a/homework_03/style1.css
+++ b/homework_03/style1.css
@@ -2,39 +2,37 @@
     box-sizing: border-box;
 }
 
+a {    
+    background-color: #AEC09A;    
+}
+
+.button {
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+}
+
 button {
-    display: block;
     background-color: #778D45;
-    border: none;
-    border-radius: 25%;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: xx-large;
-    font-weight: bold;
-    padding: 50px;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 70px;
+    border: none;    
+    padding: 15px;
+    margin: 10px    
 }
 
-a {
-    display: block;
-    background-color: #AEC09A;
-    border: none;
-    border-radius: 25%;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: xx-large;
-    font-weight: bold;
-    padding: 50px;
-    margin-top: 30px;
-    margin-left: 30px;
-}
-
-a:hover {
+.light-green:hover {
     color: black;
+}
+
+.green {
+    padding: 16.5px;
+}
+
+.green:hover {
+    cursor: pointer;
 }
 
 a {
     transition: 1s ease-in-out;
 }
+
