--- a/homework_04/style.css
+++ b/homework_04/style.css
@@ -1,78 +1,182 @@
 body {
     margin: 0;
-    background-image: url('imagebanner.jpeg');
-    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-image: url('background.jpg');
     background-size: cover;
-  }
+    background-position: center;
+}
 
- * {
+* {
     box-sizing: border-box;
- }
+}
+
+header {
+    width: 100%;
+    position: sticky;
+    top: 0px;
+    padding: 50px;
+    background-image: url('imagebanner.jpeg');
+    background-size: cover;
+    background-position: center;
+    z-index: 1;
+}
 
 .container {
     display: flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content: center;
     align-items: flex-end;
-    height: 250px;
-    padding: 20px;   
-  }
+    height: 120px;
+    padding: 20px;
+}
 
 nav {
     display: flex;
     width: 80%;
     justify-content: space-between;
-    align-items: end;    
+    align-items: end;
 }
 
 nav:hover {
-    cursor: pointer;    
+    cursor: pointer;
 }
 
-nav > div {
+nav>div {
     display: flex;
     align-items: end;
 }
-  
-.pic { 
-    height: 50px;   
-    margin-right: 10px;        
+
+.pic {
+    height: 30px;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+    opacity: 0.5;
+}
+
+.pic:hover {
+    background-color: rgb(135, 219, 219);
+    opacity: 1;
+    border-radius: 50%;
 }
 
 p:hover {
     color: rgb(135, 219, 219);
+    opacity: 1;
 }
 
 input:hover {
     cursor: pointer;
-    background-color: rgb(135, 219, 219);;
+    background-color: rgb(135, 219, 219);
+    opacity: 1;
 }
 
 input {
-    height: 80px;    
-    width: 480px;
+    height: 50px;
+    width: 250px;
     border-radius: 15px;
     background-color: rgb(175, 197, 216);
+    opacity: 0.5;
+    transition: opacity 0.2s ease-in-out;
+    cursor: pointer;
 }
 
 ::placeholder {
     color: rgb(28, 29, 30);
-    font-size: 40px;
+    font-size: 20px;
     font-weight: bold;
 }
 
-.logo{
-    height: 100px;
+.logo {
+    height: 55px;
     margin: 0;
 }
 
 p {
     color: white;
-    font-size: 50px;
+    font-size: 25px;
     font-weight: bold;
-    margin: 0;         
-  }
-  
+    margin: 0;
+    cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+    opacity: 50%;
+}
+
+/* main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+} */
+
+.card {
+    width: fit-content;
+    height: fit-content;
+    gap: 30px;
+    position: relative;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    margin-left: 30px;
+}
+
+.poster {
+    margin-top: 50px;
+    width: 300px;
+    height: 450px;
+    padding: 10px;
+    box-shadow: 0 0 30px darkmagenta;
+}
+
+.green {
+    background-color: rgb(59, 179, 58);
+}
+
+.red {
+    background-color: rgb(255, 0, 0);
+}
+
+.tickets {
+    width: 120px;
+    height: 50px;
+    background-color: orangered;
+    position: absolute;
+    bottom: 25px;
+    right: 20px;
+    padding: 5px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.rating {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 70px;
+    left: 30px;
+    padding: 5px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+
 main {
-    width: 400vh;
-  }
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    ;
+    gap: 20px;
+    grid-auto-rows: 500px;
+    justify-content: space-between;
+}
+
+footer {
+    width: 100%;
+    height: 70px;
+    margin-top: 50px;
+    background-color: slategrey;
+}
