--- a/lesson_04/style.css
+++ b/lesson_04/style.css
@@ -4,12 +4,15 @@
 
 header {
     background-color: black;
+    opacity: 0.5;
     width: 100%;
     height: 120px;
     border: 4px solid orangered;
     margin-top: 40px;
     margin-bottom: 70px;
     padding: 10px;
+    position: sticky;
+    top: 0px;
 }
 
 .logo {
@@ -22,7 +25,8 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    font-size: 32px;
+    font-size: 32px; 
+    margin-right: 50px; 
 }
 
 body {
@@ -33,12 +37,12 @@ h1 {
     text-align: center;
     color: blueviolet;
     font-size: 100px;
-    font-family:cursive
+    font-family: cursive
 }
 
-.new_releases {   
+.new_releases {
     width: 100%;
-    min-height: 450px;
+    min-height: 550px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -46,11 +50,18 @@ h1 {
     flex-wrap: wrap;
     margin-top: 50px;
     border: 10px solid orangered;
-    background-color: black;
+    background-color: rgb(47, 45, 45);
+    
 }
 
-.new_releases > div > img {
-    width: 300px;
-    height: 450px;
-    margin: 10px;
+.image {
+    box-shadow: 0 0 40px darkred;
+    
+}
+
+.new_releases>div>img {
+    width: 400px;
+    height: 550px;
+    margin: 50px;
+    row-gap: 100px;
 }
