--- a/homework_04/style.css
+++ b/homework_04/style.css
@@ -104,7 +104,7 @@ p {
     opacity: 50%;
 }
 
-/* main {
+/* f {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -113,22 +113,31 @@ p {
 } */
 
 .card {
-    width: fit-content;
-    height: fit-content;
-    gap: 30px;
+    /* width: fit-content;
+    height: fit-content; */
+    width: 100%;
+    height: 100%;
+    /* padding: 15px; */
+    /* gap: 30px; */
     position: relative;
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    margin-left: 30px;
+    /* margin-left: 30px; */
+}
+
+.poster__wrapper {
+    width: 100%;
+    height: 100%;
 }
 
 .poster {
-    margin-top: 50px;
-    width: 300px;
-    height: 450px;
-    padding: 10px;
-    box-shadow: 0 0 30px darkmagenta;
+    /* margin-top: 50px; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* padding: 10px; */
+    /* box-shadow: 0 0 30px darkmagenta; */
 }
 
 .green {
@@ -156,7 +165,7 @@ p {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 70px;
+    top: 30px;
     left: 30px;
     padding: 5px;
     color: white;
@@ -165,11 +174,19 @@ p {
 }
 
 main {
+    flex: 1;
     width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.gridContainer {
+    width: 80%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    ;
-    gap: 20px;
+
+    padding-top: 50px;
+    gap: 50px;
     grid-auto-rows: 500px;
     justify-content: space-between;
 }
