--- a/WeatherApp_New/select/style.css
+++ b/WeatherApp_New/select/style.css
@@ -66,6 +66,7 @@ h1 {
     font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
+    border: none;
 }
 
 .button {
@@ -75,6 +76,11 @@ h1 {
     font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
+    border: none;
+}
+
+.cardHeading {
+    text-align: center;
 }
 
 .weatherCard {
@@ -84,12 +90,11 @@ h1 {
     display: flex;
     align-self: center;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     background-color: white;
     border-radius: 15px;
     box-shadow: 10px 10px 5px rgb(67, 84, 106);
-    margin-top: 300px;
+    margin-top: 270px;
 }
 
 li {
